@@ -1,3 +1,12 @@
+2008-09-18  Uros Bizjak  <ubizjak@gmail.com>
+
+	Backport from mainline:
+	2008-09-18  Uros Bizjak  <ubizjak@gmail.com>
+
+	PR rtl-optimization/37544
+	* regrename.c (maybe_mode_change): Exit early when copy_mode
+	is narrower than orig_mode and narrower than new_mode.
+
 2008-09-18  Janis Johnson  <janis187@us.ibm.com>
 
 	Backport from mainline:
